--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "jsonwebtoken": "^7.3.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
-    "koa-jwt": "^3.2.1",
     "koa-logger": "^2.0.1",
     "koa-passport": "^3.0.0",
     "koa-router": "^7.1.1",
@@ -17,9 +17,15 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.2.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
