--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa-session": "^5.0.0",
     "koa-socket": "^4.4.0",
     "koa-static": "^3.0.0",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
