--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
     "bcrypt": "^1.0.2",
     "jsonwebtoken": "^7.3.0",
     "koa": "^2.2.0",
