--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa-session": "^5.0.0",
     "koa-socket": "^4.4.0",
     "koa-static": "^3.0.0",
+    "marked": "^0.3.6",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
