--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^1.0.2",
     "jsonwebtoken": "^7.3.0",
     "koa": "^2.2.0",
@@ -19,15 +21,14 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.0",
-    "redux": "^3.6.0",
-    "socket.io": "^1.7.3"
+    "redux": "^3.6.0"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
