--- a/package.json
+++ b/package.json
@@ -7,14 +7,9 @@
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
     "jsonwebtoken": "^7.3.0",
-    "koa": "^2.2.0",
-    "koa-bodyparser": "^4.2.0",
-    "koa-logger": "^2.0.1",
-    "koa-passport": "^3.0.0",
-    "koa-router": "^7.1.1",
-    "koa-session": "^5.0.0",
-    "koa-static": "^3.0.0",
     "marked": "^0.3.6",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
