--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-blog-cms",
   "version": "0.1.0",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
